
public class User {

    private String name;
    private String email;
    private String password;
    User() {
    }
    // default constructor
    User(String name, String email, String password) {
        this.name=name;
        this.email=email;
        this.password=password;
    }

    public void createUser(String name, String email, String password) {
        User u = new User(this.name, this.email, this.password);
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public String getPassword() {
        return password;
    }

    public void setPassword(String password) {
        this.password = password;
    }

    @Override
    public String toString() {
        return "User{" +
                ", name='" + name + '\'' +
                ", email='" + email + '\'' +
                ", password='" + password + '\'' +
                '}';
    }
}

