@startuml
'https://plantuml.com/class-diagram

class User {
   - String name
   - String email
   - String password
   + User()
   + User(String, String, String)
   + String getName()
   + void setName(String)
   + String getEmail()
   + void setEmail(String)
   + String getPassword()
   + void setPassword(String)
   + String toString()
}

class Wish {
   - String dateCreated
   - String recipient
   - String wishContent
   + Wish()
   + Wish(String, String, String)
   + void addWish(int, String, String, String)
   + String getDateCreated()
   + void setDateCreated()
   + String getRecipient()
   + void setRecipient()
   + String getWishContent()
   + void setWishContent()
   + String toString()
}

class Wishlist {
    - String listName
    - String creationDate
    - List <Wish> Wishes
    + WishList()
    + WishList(String, String)
    + void addWish(Wish)
    + void removeWish()
    + List<Wish>getWishes()
    + String getListName()
    + void setListName()
    + String getCreationDate()
    + void setCreationDate()
    + void setWishes()
    + String toString()
}

class DbSql {
    - Connection connection
    + DbSql()
    + Connection getConnection()
    + void createUser(User)
    + void createWish(Wish)
    + void removeWish(int)
    + void editWish(int, String, String)
    + void createWishList(WishList, int)
    + void removeWishList(int)
    + void addWishToWishList(int, int)
    + String getNameById(int)
    + int fetchBrugerIdByName(String)
    + int fetchWishListIdByName(String)
    + int fetchWishIdsByUserId(int)
    + int fetchWishIdsByWishName(String)
    + boolean fetchPasswordByMail(String, String)
    + int fetchUserIdByMail(String)
}

Wishlist -left-|> Wish : aggregation
DbSql -up-|> Wishlist : One way association
DbSql -up-|> User : One way association
User -right-|> Wishlist : association

@enduml